# resource

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  dockerfile  index.html  local_dockerfile  plan.md  readme.md  vercel.json
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: master.yml
about/: index.html
api/: Cargo.toml  readme.md  reddit.json
api/migrations/2020-02-21-103402_reddit-rending-table/: up.sql
api/page/: about.md  comunities.md  hello.md
api/src/: data.rs  main.rs  schema.rs  tera_register.rs
api/src/model/: reddit.rs
api/src/router/: mod.rs  page.rs  reddit.rs
api/templates/: base.html  page.html  reddit.html
backend/: .pdm.toml  Dockerfile  pyproject.toml
backend/app/: main.py
client/: Cargo.toml  Makefile.toml  index.html
client/src/: lib.rs  model.rs  route.rs  session.rs
client/src/page/: about.md  about.rs  home.rs  mod.rs  posts.rs  profile.rs
comunities/: index.html
data/: index.toml
frontend/: Staple.toml
frontend/data/: about.md  comunities.md  index.json  installation-and-setup.md  rfc.json  tools-and-plugins.md  tutorials.md
frontend/data/be-a-pro/: hire-list.md
frontend/data/during-programing/: github-action-template.md  rfc.json  terminology.md
frontend/data/get-started/: cargo-plugin.md  ide.md  installation-and-setup.md  tools-and-plugins.md  tutorials.md
frontend/data/path-to-production/: build-a-docker-image.md  cargo-compile-options.md
frontend/pages/rust_trending_page/: README.md  package.json
frontend/pages/rust_trending_page/public/: index.html  style.css
frontend/pages/rust_trending_page/src/: App.svelte  main.js
frontend/templates/resource/: base.html  blogs.html  index.html  macros.html  page.html  rfc.html  trending.html
frontend/templates/resource/statics/: style.css  style.less  trending.css  trending.js
frontend/templates/resource/statics/fonts/: icon.eot  resource.eot
installation-and-setup/: index.html
migrations/2019-07-17-070915_add_blog_table/: up.sql
migrations/2019-07-28-140848_add_post_table/: down.sql  up.sql
migrations/2019-07-31-152042_add_init_flag_for_blog/: down.sql  up.sql
migrations/2020-02-21-103402_reddit-rending-table/: down.sql
migrations/2020-02-23-075005_reddit_telegram_message_id_and_create_time/: down.sql  up.sql
page/: about.md  installation-and-setup.md  tools-and-plugins.md  tutorials.md
rfc/: index.html
scripts/rust_rfc_status/: README.md  pyproject.toml
scripts/rust_rfc_status/rust_rfc_status/: RfcParser.py  __init__.py  basic_fetcher.py  issue_fetcher.py  models.py  pr_fetcher.py  utils.py
server/: Cargo.toml  Makefile.toml
server/migrations/2019-07-17-070915_add_blog_table/: down.sql
server/src/: main.rs  schema.rs
server/src/models/: mod.rs  post.rs
server/src/routers/: mod.rs  post.rs  rss.rs  telegram.rs
server/templates/: index.html  posts.html
server/templates/resources/: style.css
src/: data.rs  main.rs  schema.rs  tera_register.rs
src/model/: mod.rs  reddit.rs
src/models/: blog.rs  post.rs
src/router/: mod.rs  page.rs  reddit.rs
src/routers/: blog.rs  index.rs  mod.rs  post.rs  telegram.rs
statics/: icon.css  style.css  style.less  trending.js.map
statics/trending/: bundle.css.map
telegram_typing_bot/: Cargo.toml
telegram_typing_bot/src/: bot.rs  error.rs  lib.rs  typing.rs
telegram_typing_bot/src/methods/: basic.rs  mod.rs  update.rs
templates/: base.html  blogs.html  index.html  page.html  posts.html  reddit.html
templates/public/: style.css
templates/resources/: style.css
templates/statics/: style.less
tools-and-plugins/: index.html
trending/: index.html
tutorials/: index.html
