[package]
name = "resource"
version = "0.1.0"
authors = ["Kilerd <blove694@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.4.0"
openssl = "0.10.28"

# serde
serde = "1.0.104"
serde_derive = "1.0.104"

r2d2 = "0.8.8"
diesel = { version = "1.4.3", features = ["postgres", "r2d2", "chrono"] }
diesel_derives = "1.4.1"
diesel_migrations = "1.4.0"

tera = "1.0.2"
pulldown-cmark = { version = "0.7.0", default-features = false }

chrono = { version = "0.4.10", features = ["serde"] }
rust-crypto = "0.2.36"

http = "0.2.0"
actix-web= "2.0.0"
actix-files = "0.2.1"
futures = "0.3.4"

# log
log = "0.4.8"
pretty_env_logger = "0.4.0"

time = "0.2.6"
rand = "0.7.3"
rss = "1.9.0"
actix = "0.9.0"
jsonwebtoken = "7.0.1"
actix-cors = "0.2.0"
actix-identity = "0.2.1"
regex = "1.3.4"
telegram_typing_bot = { git = "https://github.com/Kilerd/telegram_typing_bot" }
futures-util = "0.3.4"
reqwest= "0.10.2"
actix-rt = "1.0.0"
once_cell = "1.3.1"
toml = "0.5.6"
tokio = {version="0.2", features=["full"]}
serde_json = "1.0.48"
