[package]
name = "resource"
version = "0.1.0"
authors = ["Kilerd <blove694@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
openssl = "0.10.29"

# serde
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0.56"

# diesel
r2d2 = "0.8.8"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
diesel_derives = "1.4.1"
diesel_migrations = "1.4.0"

# render
tera = "1.2.0"
pulldown-cmark = { version = "0.7.0", default-features = false }

chrono = { version = "0.4.11", features = ["serde"] }
rust-crypto = "0.2.36"

http = "0.2.1"
actix-web= "2.0.0"
actix-files = "0.2.1"
futures = "0.3.4"

# log
log = "0.4.8"
pretty_env_logger = "0.4.0"

time = "0.2.10"
rand = "0.7.3"
rss = "1.9.0"
actix = "0.9.0"
jsonwebtoken = "7.1.0"
actix-cors = "0.2.0"
actix-identity = "0.2.1"
regex = "1.3.7"
telegram_typing_bot = { git = "https://github.com/Kilerd/telegram_typing_bot" }
futures-util = "0.3.4"
actix-rt = "1.1.0"
once_cell = "1.3.1"
toml = "0.5.6"
tokio = { version = "0.2.18", features = ["full"] }
surf = "1.0.3"
itertools = "0.9.0"
