[package]
name = "resource"
version = "0.1.0"
authors = ["Kilerd <blove694@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
openssl = "0.10.30"
# serde
serde = "1.0.115"
serde_derive = "1.0.115"
serde_json = "1.0.64"
# diesel
r2d2 = "0.8.9"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono"] }
diesel_derives = "1.4.1"
diesel_migrations = "1.4.0"
chrono = { version = "0.4.15", features = ["serde"] }
http = "0.2.1"
actix-web = "2.0.0"
futures = "0.3.5"
# log
log = "0.4.11"
pretty_env_logger = "0.4.0"
time = "0.2.17"
rand = "0.7.3"
actix-cors = "0.2.0"
telegram_typing_bot = { git = "https://github.com/Kilerd/telegram_typing_bot" }
futures-util = "0.3.5"
actix-rt = "1.1.1"
once_cell = "1.4.1"
tokio = { version = "0.2.22", features = ["full"] }
surf = "1.0.3"
