[package]
name = "client"
version = "0.1.0"
authors = ["Kilerd <blove694@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "0.4.0"
wasm-bindgen = "0.2.48"
web-sys = "0.3.27"
serde = "1.0.98"
chrono = { version = "0.4.7", features = ["serde"] }
futures = "0.1.28"

[profile.release]
opt-level = 's'