[package]
name = "client"
version = "0.1.0"
authors = ["Kilerd <blove694@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "0.4.1"
wasm-bindgen = "0.2.50"
web-sys = "0.3.27"
serde = "1.0.102"
chrono = { version = "0.4.9", features = ["serde"] }
futures = "0.1.29"
strum = "0.15.0"
strum_macros = "0.15.0"

[profile.release]
opt-level = 's'
