[package]
name = "telegram_typing_bot"
version = "0.1.0"
authors = ["Kilerd <blove694@gmail.com>"]
edition = "2018"
description = "yet another async telegram bot framework"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.3.1"
actix = "0.8.3"
reqwest = "0.9.19"

[features]
default = []
futures = []
